[workspace]
members = [
	"./polkit-sys",
	"./polkit",
	"./polkit-agent",
	"./polkit-agent-sys",
	"examples/*",
]

resolver = "3"
[workspace.package]
version = "0.3.0"
edition = "2024"
authors = [
	"Decodertalkers <aakari@tutanota.com>",
	"Val Packett <val@packett.cool>",
]
keywords = ["PolicyKit", "PolKit", "libpolkit-gobject"]
categories = ["api-bindings", "authentication", "os::unix-apis"]
description = "High-level bindings for libpolkit-gobject-1"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Decodetalkers/polkit-rs"
repository = "https://github.com/Decodetalkers/polkit-rs"


[workspace.dependencies]
polkit-rs = { version = "0.3.0", path = "./polkit" }
polkit-rs-sys = { version = "0.3.0", path = "./polkit-sys" }
polkit-agent-rs-sys = { version = "0.3.0", path = "./polkit-agent-sys" }
polkit-agent-rs = { version = "0.3.0", path = "./polkit-agent" }
bitflags = "2"
glib = "0.20"
gio = "0.20"
nix = "0.30"

glib-sys = "0.20"
gobject-sys = "0.20"
gio-sys = "0.20"
libc = "0.2"
