[package]
name = "polkit-agent-rs-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
build = "build.rs"

[package.metadata.system-deps.polkit_agent_1]
name = "polkit-agent-1"
version = "0"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "polkit_agent_rs_sys"

[dependencies]
libc.workspace = true
glib-sys.workspace = true
gobject-sys.workspace = true
polkit-rs-sys.workspace = true
gio-sys.workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
