[package]
name = "polkit-agent-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
bitflags.workspace = true
glib.workspace = true
gio.workspace = true
polkit-agent-rs-sys.workspace = true
polkit-rs.workspace = true
