[package]
name = "polkit-rs-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
documentation = "https://docs.rs/polkit-rs-sys/"
build = "build.rs"

[package.metadata.system-deps.polkit_gobject_1]
name = "polkit-gobject-1"
version = "0"

[package.metadata.system-deps.polkit_gobject_1.v0_101]
version = "0.101"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[dependencies]
libc.workspace = true
glib-sys.workspace = true
gio-sys.workspace = true
gobject-sys.workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_101 = []
