[package]
name = "polkit-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
documentation = "https://docs.rs/polkit-rs/"

[features]
v0_101 = ["polkit-rs-sys/v0_101"]

[dependencies]
bitflags.workspace = true
glib.workspace = true
gio.workspace = true
polkit-rs-sys.workspace = true
