[package]
name = "polkit-min"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
polkit-agent.workspace = true
glib.workspace = true
nix = { workspace = true, features = ["process"] }
